fixes side scrolling on mobile wq

--- a/styles.css
+++ b/styles.css
@@ -24,19 +24,20 @@ main {
   /* background-color: palegreen; */
 }
 
-.main-padding {
-  padding: 0em 2em 0em 3em;
-}
-
 aside {
   background-color: palevioletred;
 }
 
 .form-container {
   /* background-color: aqua; */
-  width: 100%;
+  /* width: 100%; */
   display: flex;
   flex-direction: column;
+}
+
+.main-padding > * {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
 }
 
 .input-container {
@@ -88,10 +89,6 @@ input:last-child {
 a {
   color: inherit;
 }
-
-/* .form-footer > p {
-  margin-bottom: 2.5em;
-} */
 
 @media screen and (min-width: 600px) {
   container {
